--- a/Practicals/CSS/Practical-12.css
+++ b/Practicals/CSS/Practical-12.css
@@ -1,11 +1,12 @@
 table , tr{
     border :1px solid;
     border-collapse: collapse;
+    
 }
 tr{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
-    width: auto;
+    width: 50%;
     height: 55px;
 }
 
