--- a/Practicals/CSS/Practical-15.css
+++ b/Practicals/CSS/Practical-15.css
@@ -1,58 +1,119 @@
-* {
-    padding: 0;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap');
+
+*{
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
-  }
-  body {
-    background-color: rgb(60, 90, 145);
-    width: 100%;
+    font-family: 'Open Sans', sans-serif
+}
+
+body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background-color: #4c3c89;
+}
+
+.main{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    background-color: white;
     height: 90vh;
+    border-radius: 5px;
+    width: 40vw;
+}
+
+.heading{
+    height: 15vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #f7f7f7;
+    border-radius: 5px;
+}
+
+.heading p{
+    font-size: 3rem;
+}
+
+.myform {
     display: flex;
     justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    height: 75vh;
+    width: 100%;
+    gap: 1.5rem;
+}
+.label {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    /* margin: 0 100px; */
+    /* gap: .5rem;  */
+}
+label{
+    font-size: 1.5rem;
+    font-weight: 300;
+    text-align: start;
+}
+
+input[type='text'],
+input[type='email'],
+input[type='password']
+{
+    width: 30vw;
+    height: 7vh;
+    border-radius: 7px;
+    border: 3px solid black;
+    font-size: 1.5rem;
+    padding: 0 1vw;
+    padding-right: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    outline: none;
+}
+
+.submit {
+    display: flex;
     align-items: center;
-  }
-  .card {
-    border: 2px solid black;
-    width: 400px;
-    height: 500px;
-    background-color: #fff;
-    border-radius: 10px;
-    
-  }
-  h1{
-      margin-top: 10px;
-      text-align: center;
-  }
-  form{
-      padding: 50px;
-  
-  }
-  label{
-      font-size: 18px;
-      line-height: 2px;
-  }
-  input{
-      width:300px;
-      height: 30px
-  
-  }
-  .submit{
-      text-align: center;
-     
-      height: 35px; 
-       
-  }
-  a{
-      text-decoration: none;
-      color: #fff;
-      text-align: center;
-      background-color: rgb(39, 83, 167);
-      padding: 10px 120px;
-      border-radius: 5px;
-      
-  
-  }
-  i{
-      visibility: hidden;
-  }
-  
+    justify-content: center;
+    width: 100%;
+}
+input[type='submit']{
+    padding: 1rem 3rem;
+    width: 100%;
+    border-radius: 7px;
+    font-size: 1.5rem;
+    border: none;
+    background-color: #4c3c89;
+    color: white;
+    box-shadow: 5px 5px 10px black;
+}
+
+.fas{
+    display: none;
+    position: relative;
+    right: 40px;
+    font-size: 1.3rem;
+}
+
+.fa-exclamation-circle{
+    color: red;
+}
+
+.fa-check-circle{
+    color:green;
+}
+
+.error{
+    color: red;
+    /* font-style: italic; */
+    font-size: 1rem;
+    /* background-color: #00f; */
+}
